--- a/Todo/package.json
+++ b/Todo/package.json
@@ -10,18 +10,22 @@
     "server": "json-server --port 3002 db.json"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.4",
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
     "json-server": "^0.17.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.5",
+    "use-throttle": "0.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
